refactor: min, max 중첩을 이용한 상한, 하한 제한에서 clamp로 직관적으로 변경